--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "mazhipeng and zhangchunmeng website",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "start": "webpack --config webpack.config.js"
   },
   "keywords": [
     "technology",
@@ -14,5 +15,21 @@
     "zcm"
   ],
   "author": "mazhipeng",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^2.1.5",
+    "webpack-dev-server": "^3.1.3"
+  },
+  "dependencies": {
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
+  }
 }
